Nouvelle organisation + TU

--- a/AI/listActions.html
+++ b/AI/listActions.html
@@ -1,7 +1,9 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html>
 <head>
-	<script src="listActions.js" ></script>
+	<script src="listActionsTests.js" ></script>
+	<script src="listActions.js" defer></script>
+	
 </head>
 <body>
 
