--- a/Game/game.html
+++ b/Game/game.html
@@ -3,6 +3,9 @@
 <head>
 	<style>Interface></style>
 	<script src="js/GUI.js" defer></script>
+	<script src="js/Engine.js" defer></script>
+	<script src="js/Game.js" defer></script>
+	
 	<link rel="stylesheet" type="text/css" href="game.css" /> 
 </head>
 <body>
