--- a/Game/game.html
+++ b/Game/game.html
@@ -1,96 +1,116 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<style>Interface></style>
-	<script src="js/GUI.js" defer></script>
-	<script src="js/Engine.js" defer></script>
-	<script src="js/Game.js" defer></script>
+	<meta charset="utf-8" />
+	<style>Variante du jeu des dames></style>
 	
-	<link rel="stylesheet" type="text/css" href="game.css" /> 
+	<link rel="stylesheet" href="game.css">
+	
+	
+	<script src="js/Engine.js" defer></script>
+	<script src="js/GUI.js" defer></script>
+	<script src="js/Game.js" defer></script>
+	<script src="js/AI.js" defer></script>
+	<script src="js/Main.js" defer></script>
+	
 </head>
 <body>
-	<section id="players">
-		<p>Au tour de : <span class="currentPlayer"></span></p>
+	<section id="game">
+		<section id="players">
+			<ul id="player_1">
+				<li>White</li>
+				<li><span class="name"></span></li>
+				<li><span class="type"></span></li>
+			</ul>
+			
+			<ul id="player_2">
+				<li>Black</li>
+				<li><span class="name"></span></li>
+				<li><span class="type"></span></li>
+			</ul>
+		</section>
+		<section id="info">
+			<p><button type="button" id="run">Démarrer</button></p>
+		</section>
+		<table id="board">
+			<tr>
+				<td data-line="0" data-column="0"></td>
+				<td data-line="0" data-column="1"></td>
+				<td data-line="0" data-column="2"></td>
+				<td data-line="0" data-column="3"></td>
+				<td data-line="0" data-column="4"></td>
+				<td data-line="0" data-column="5"></td>
+				<td data-line="0" data-column="6"></td>
+				<td data-line="0" data-column="7"></td>
+			</tr>
+			<tr>
+				<td data-line="1" data-column="0"></td>
+				<td data-line="1" data-column="1"></td>
+				<td data-line="1" data-column="2"></td>
+				<td data-line="1" data-column="3"></td>
+				<td data-line="1" data-column="4"></td>
+				<td data-line="1" data-column="5"></td>
+				<td data-line="1" data-column="6"></td>
+				<td data-line="1" data-column="7"></td>
+			</tr><tr>
+				<td data-line="2" data-column="0"></td>
+				<td data-line="2" data-column="1"></td>
+				<td data-line="2" data-column="2"></td>
+				<td data-line="2" data-column="3"></td>
+				<td data-line="2" data-column="4"></td>
+				<td data-line="2" data-column="5"></td>
+				<td data-line="2" data-column="6"></td>
+				<td data-line="2" data-column="7"></td>
+			</tr>
+			<tr>
+				<td data-line="3" data-column="0"></td>
+				<td data-line="3" data-column="1"></td>
+				<td data-line="3" data-column="2"></td>
+				<td data-line="3" data-column="3"></td>
+				<td data-line="3" data-column="4"></td>
+				<td data-line="3" data-column="5"></td>
+				<td data-line="3" data-column="6"></td>
+				<td data-line="3" data-column="7"></td>
+			</tr><tr>
+				<td data-line="4" data-column="0"></td>
+				<td data-line="4" data-column="1"></td>
+				<td data-line="4" data-column="2"></td>
+				<td data-line="4" data-column="3"></td>
+				<td data-line="4" data-column="4"></td>
+				<td data-line="4" data-column="5"></td>
+				<td data-line="4" data-column="6"></td>
+				<td data-line="4" data-column="7"></td>
+			</tr>
+			<tr>
+				<td data-line="5" data-column="0"></td>
+				<td data-line="5" data-column="1"></td>
+				<td data-line="5" data-column="2"></td>
+				<td data-line="5" data-column="3"></td>
+				<td data-line="5" data-column="4"></td>
+				<td data-line="5" data-column="5"></td>
+				<td data-line="5" data-column="6"></td>
+				<td data-line="5" data-column="7"></td>
+			</tr><tr>
+				<td data-line="6" data-column="0"></td>
+				<td data-line="6" data-column="1"></td>
+				<td data-line="6" data-column="2"></td>
+				<td data-line="6" data-column="3"></td>
+				<td data-line="6" data-column="4"></td>
+				<td data-line="6" data-column="5"></td>
+				<td data-line="6" data-column="6"></td>
+				<td data-line="6" data-column="7"></td>
+			</tr>
+			<tr>
+				<td data-line="7" data-column="0"></td>
+				<td data-line="7" data-column="1"></td>
+				<td data-line="7" data-column="2"></td>
+				<td data-line="7" data-column="3"></td>
+				<td data-line="7" data-column="4"></td>
+				<td data-line="7" data-column="5"></td>
+				<td data-line="7" data-column="6"></td>
+				<td data-line="7" data-column="7"></td>
+			</tr>
+		</table>
 	</section>
-
-	<table id="board">
-		<tr>
-			<td data-line="0" data-column="0"></td>
-			<td data-line="0" data-column="1"></td>
-			<td data-line="0" data-column="2"></td>
-			<td data-line="0" data-column="3"></td>
-			<td data-line="0" data-column="4"></td>
-			<td data-line="0" data-column="5"></td>
-			<td data-line="0" data-column="6"></td>
-			<td data-line="0" data-column="7"></td>
-		</tr>
-		<tr>
-			<td data-line="1" data-column="0"></td>
-			<td data-line="1" data-column="1"></td>
-			<td data-line="1" data-column="2"></td>
-			<td data-line="1" data-column="3"></td>
-			<td data-line="1" data-column="4"></td>
-			<td data-line="1" data-column="5"></td>
-			<td data-line="1" data-column="6"></td>
-			<td data-line="1" data-column="7"></td>
-		</tr><tr>
-			<td data-line="2" data-column="0"></td>
-			<td data-line="2" data-column="1"></td>
-			<td data-line="2" data-column="2"></td>
-			<td data-line="2" data-column="3"></td>
-			<td data-line="2" data-column="4"></td>
-			<td data-line="2" data-column="5"></td>
-			<td data-line="2" data-column="6"></td>
-			<td data-line="2" data-column="7"></td>
-		</tr>
-		<tr>
-			<td data-line="3" data-column="0"></td>
-			<td data-line="3" data-column="1"></td>
-			<td data-line="3" data-column="2"></td>
-			<td data-line="3" data-column="3"></td>
-			<td data-line="3" data-column="4"></td>
-			<td data-line="3" data-column="5"></td>
-			<td data-line="3" data-column="6"></td>
-			<td data-line="3" data-column="7"></td>
-		</tr><tr>
-			<td data-line="4" data-column="0"></td>
-			<td data-line="4" data-column="1"></td>
-			<td data-line="4" data-column="2"></td>
-			<td data-line="4" data-column="3"></td>
-			<td data-line="4" data-column="4"></td>
-			<td data-line="4" data-column="5"></td>
-			<td data-line="4" data-column="6"></td>
-			<td data-line="4" data-column="7"></td>
-		</tr>
-		<tr>
-			<td data-line="5" data-column="0"></td>
-			<td data-line="5" data-column="1"></td>
-			<td data-line="5" data-column="2"></td>
-			<td data-line="5" data-column="3"></td>
-			<td data-line="5" data-column="4"></td>
-			<td data-line="5" data-column="5"></td>
-			<td data-line="5" data-column="6"></td>
-			<td data-line="5" data-column="7"></td>
-		</tr><tr>
-			<td data-line="6" data-column="0"></td>
-			<td data-line="6" data-column="1"></td>
-			<td data-line="6" data-column="2"></td>
-			<td data-line="6" data-column="3"></td>
-			<td data-line="6" data-column="4"></td>
-			<td data-line="6" data-column="5"></td>
-			<td data-line="6" data-column="6"></td>
-			<td data-line="6" data-column="7"></td>
-		</tr>
-		<tr>
-			<td data-line="7" data-column="0"></td>
-			<td data-line="7" data-column="1"></td>
-			<td data-line="7" data-column="2"></td>
-			<td data-line="7" data-column="3"></td>
-			<td data-line="7" data-column="4"></td>
-			<td data-line="7" data-column="5"></td>
-			<td data-line="7" data-column="6"></td>
-			<td data-line="7" data-column="7"></td>
-		</tr>
-	</table>
 </body>
 </html>
